increasing permgen size and adding ES 1.0.1